[project]
name = "poe-wrapper"
dynamic = ["version"]
description = "Асинхронная прослойка для Poe REST API"
readme = "README.md"
authors = [
    { name = "femto" }
]
requires-python = ">=3.13.11"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi-poe>=0.0.83",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/poe_wrapper/_version.py"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]